fix styles on mobile devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -76,6 +76,10 @@ body {
     max-width: 820px;
     margin: 90px auto;
 
+    @media (max-width: 645px) {
+      margin: 0 auto;
+    }
+
     .content__title {
       margin: 0;
     }
@@ -97,6 +101,10 @@ body {
     display: flex;
     align-items: center;
     font-size: 32px;
+
+    @media (max-width: 645px) {
+      font-size: 18px;
+    }
 
     svg {
       position: relative;
@@ -151,11 +159,15 @@ body {
     padding-top: 30px;
     margin-top: 30px;
 
+    @media (max-width: 645px) {
+      flex-wrap: wrap;
+    }
+
     &-img {
       display: flex;
       align-items: center;
       margin-right: 15px;
-      width: 10%;
+      width: 20%;
 
       img {
         width: 80px;
@@ -186,7 +198,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
+      width: 110px;
 
       &-minus {
         svg {
@@ -268,14 +280,27 @@ body {
 
     &-buttons {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       margin-top: 40px;
+
+      @media (max-width: 645px) {
+        justify-content: center;
+      }
+
+
 
       .go-back-btn {
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 16px;
         width: 210px;
+
+        @media (max-width: 645px) {
+          width: 60%;
+          margin-bottom: 20px;
+        }
 
         border-color: darken($color: $gray-line, $amount: 10);
 
@@ -309,6 +334,10 @@ body {
         font-weight: 600;
         width: 210px;
         padding: 16px;
+
+        @media (max-width: 645px) {
+          width: 60%;
+        }
       }
     }
   }
