--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -26,6 +26,10 @@
     span {
         font-size: 20px;
         font-weight: bold;
+
+        @media (max-width: 645px) {
+            font-size: 16px;
+        }
     }
 
     &>div {
