--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -36,6 +36,10 @@
       letter-spacing: 1%;
       text-transform: uppercase;
       font-weight: 800;
+
+      @media (max-width: 645px) {
+        font-size: 20px;
+      }
     }
 
     p {
